Break search results error msg to prevent UI stretch

--- a/data/styles.css
+++ b/data/styles.css
@@ -80,6 +80,7 @@ h2 {
 .bubble-message {
     flex-grow: 1;
     text-align: center;
+    overflow-wrap: anywhere;
 }
 
 .bubble i {
